--- a/upload/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/upload/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -5,7 +5,6 @@ html {
 }
 
 body {
-	color: #fff;
 	font-family: 'Questrial', sans-serif;
 	margin: 0px;
 	padding: 0px;
@@ -420,100 +419,70 @@ label {
 	-moz-box-shadow: 0px 2px 2px #DDDDDD;
 }
 /* menu */
-#menu {
-	background: #585858;
-	border-bottom: 1px solid #000000;
-	height: 37px;
-	margin-bottom: 15px;
-	-webkit-border-radius: 5px 5px 5px 5px;
-	-moz-border-radius: 5px 5px 5px 5px;
-	-khtml-border-radius: 5px 5px 5px 5px;
-	border-radius: 5px 5px 5px 5px;
-	-webkit-box-shadow: 0px 2px 2px #DDDDDD;
-	-moz-box-shadow: 0px 2px 2px #DDDDDD;
-	box-shadow: 0px 2px 2px #DDDDDD;
-	padding: 0px 5px;
+#menu{
+	background:url(../image/menu-bg.png) no-repeat;	
+	height:40px;
+	margin-bottom:15px;	
+	padding:0 20px;
 }
-
-#menu ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
-
-#menu>ul>li {
-	position: relative;
-	float: left;
-	z-index: 20;
-	padding: 6px 5px 5px 0px;
-}
-
-#menu>ul>li:hover {
-	
-}
-
-#menu>ul>li>a {
-	font-size: 13px;
-	color: #FFF;
-	line-height: 14px;
-	text-decoration: none;
-	display: block;
-	padding: 6px 10px 6px 10px;
-	margin-bottom: 5px;
-	z-index: 6;
-	position: relative;
-}
-
-#menu>ul>li:hover>a {
-	background: #000000;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	-khtml-border-radius: 5px;
-	border-radius: 5px;
-}
-
-#menu>ul>li>div {
-	display: none;
-	background: #FFFFFF;
-	position: absolute;
-	z-index: 5;
-	padding: 5px;
-	border: 1px solid #000000;
-	-webkit-border-radius: 0px 0px 5px 5px;
-	-moz-border-radius: 0px 0px 5px 5px;
-	-khtml-border-radius: 0px 0px 5px 5px;
-	border-radius: 0px 0px 5px 5px;
-	background: url('../image/menu.png');
-}
-
-#menu>ul>li:hover>div {
-	display: table;
-}
-
-#menu>ul>li>div>ul {
-	display: table-cell;
-}
-
-#menu>ul>li ul+ul {
-	padding-left: 20px;
-}
-
-#menu>ul>li ul>li>a {
-	text-decoration: none;
-	padding: 4px;
-	color: #FFFFFF;
-	display: block;
-	white-space: nowrap;
-	min-width: 120px;
-}
-
-#menu>ul>li ul>li>a:hover {
-	background: #000000;
-}
-
-#menu>ul>li>div>ul>li>a {
-	color: #FFFFFF;
-}
+	#menu ul{
+		list-style:none;
+		margin:0;
+		padding:0;
+	}
+		#menu > ul > li{
+			position:relative;
+			float:left;
+			z-index:20;	
+		}
+			#menu > ul > li:hover{
+				background:url(../image/menu-hover.png) repeat;
+			}
+			#menu > ul > li > a{
+				font-size:12px;
+				color:#fff;
+				line-height:14px;
+				text-decoration:none;
+				display:block;
+				padding:12px 15px;
+				z-index:6;
+				position:relative;
+				font-weight:bold;
+			}
+				#menu > ul > li > div{
+					display:none;				
+					position:absolute;
+					z-index:99;					
+					border:solid #106ecc;
+					border-width:0 1px 1px 1px;
+					background:#1171cf;					
+					text-transform:capitalize;
+				}
+					#menu > ul > li:hover > div{
+						display:table;
+					}
+					#menu > ul > li > div > ul{
+						display:table-cell;
+					}
+					#menu > ul > li ul + ul{
+						padding-left:20px;
+					}
+						#menu > ul > li ul > li > a{
+							text-decoration:none;
+							padding:8px 12px;
+							color:#fff;
+							display:block;
+							white-space:nowrap;
+							min-width:120px;
+							border-bottom:1px solid #1682ef;
+							font-weight:bold;
+						}
+							#menu > ul > li ul > li > a:hover{
+								background:#0e65ba;
+							}
+						#menu > ul > li > div > ul > li > a{
+							color:#fff;
+						}
 
 .breadcrumb {
 	color: #CCCCCC;
@@ -836,7 +805,7 @@ a.button:hover,input.button:hover {
 }
 
 .box .box-content ul li a {
-	background: #f3f3f3 url(../image/bullet1.png) no-repeat 12px 14px;
+	background: #f3f3f3 url(../image/bullet1.png) no-repeat 7px 4px;
 	border-top: 2px solid #FFFFFF;
 	display: block;
 	text-decoration: none;
@@ -855,13 +824,13 @@ ul.box-category>li+li {
 }
 
 ul.box-category>li>a {
-	background: #f1f1f1 url(../image/bullet1.png) no-repeat 10px 14px
+	background: #f1f1f1 url(../image/bullet1.png) no-repeat 5px 8px
 		!important;
 	padding: 8px 8px 8px 24px !important;
 }
 
 ul.box-category>li>a:hover {
-	background: #e8e8e8 url(../image/bullet1.png) no-repeat 10px 14px
+	background: #e8e8e8 url(../image/bullet1.png) no-repeat 5px 10px
 		!important;
 	padding: 8px 8px 8px 24px !important;
 }
@@ -882,17 +851,21 @@ ul.box-category>li ul>li>a {
 	text-decoration: none;
 	display: block;
 	font-size: 11px;
-	background: #f1f1f1 none !important;
+	background: #f1f1f1 url(../image/bullet21.png) no-repeat 17px 10px
+		!important;
 	text-indent: 12px;
-	padding: 8px 8px 8px 20px !important;
+	padding: 8px 8px 8px 30px !important;
 }
 
-ul.box-category>li ul>li>a.active {
+ul.box-category>li ul>li>a.active {	
+	background: #f1f1f1 url(../image/bullet21.png) no-repeat 20px 10px
+		!important;
 	font-weight: bold;
 }
 
 ul.box-category>li ul>li>a:hover {
-	background: #e8e8e8 none !important;
+	background: #f1f1f1 url(../image/bullet21.png) no-repeat 20px 10px
+		!important;
 }
 
 /* box filter */
