--- a/upload/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/upload/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -2108,6 +2108,10 @@ ul.box-filter>li ul {
 .boxForm {
 	padding:6px;
 }
+
+.boxContactUs {
+	padding:4px;
+}
 .widthLoginInput {
 	width:155px;
 	margin-bottom:13px;
