--- a/upload/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/upload/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -573,6 +573,10 @@ input.large-field,select.large-field {
 	width: 300px;
 }
 
+input.medium-field,select.medium-field {
+	width: 255px;
+}
+
 table.list {
 	border-collapse: collapse;
 	width: 100%;
